Bug 228395 - KTorrent crashes whole trying do upload second torrent
Summary: KTorrent crashes whole trying do upload second torrent
Status: RESOLVED FIXED
Alias: None
Product: ktorrent
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Joris Guisson
URL:
Keywords:
: 228331 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-02-25 01:00 UTC by Jerzy
Modified: 2010-02-26 23:31 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jerzy 2010-02-25 01:00:38 UTC
Application: ktorrent (4.0beta1)
KDE Platform Version: 4.4.00 (KDE 4.4.0)
Qt Version: 4.6.1
Operating System: Linux 2.6.31.6-desktop-1mnb i686
Distribution: "Mandriva Linux 2010.0"

-- Information about the crash:
I have 2 completely downloaded torrents. After I run KTorrent and peers are found, is starts uploading first torrent. When trying to upload next torrent, it crashes.
I am using Mandriva 2010.0 (i586) with KDE 4.4.0. KTorrent is compiled from svn (rev. 1095757).


The crash can be reproduced every time.

 -- Backtrace:
Application: KTorrent (ktorrent), signal: Segmentation fault
[Current thread is 1 (Thread 0xb49a36d0 (LWP 17476))]

Thread 4 (Thread 0xb2be2b70 (LWP 17479)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb5a6e911 in select () from /lib/i686/libc.so.6
#2  0xb76e9bda in dht::RPCServerThread::run (this=0x9d5d6a0) at /home/jerzy/Programy/ktorrent/libbtcore/dht/rpcserver.cpp:107
#3  0xb675ce2f in ?? () from /usr/lib/libQtCore.so.4
#4  0xb66c7885 in start_thread () from /lib/i686/libpthread.so.0
#5  0xb5a7657e in clone () from /lib/i686/libc.so.6

Thread 3 (Thread 0xae7f3b70 (LWP 17497)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb66cbd12 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb675c72c in ?? () from /usr/lib/libQtCore.so.4
#3  0xb675c870 in QThread::msleep () from /usr/lib/libQtCore.so.4
#4  0xb76818b9 in net::DownloadThread::update (this=0x9c92108) at /home/jerzy/Programy/ktorrent/libbtcore/net/downloadthread.cpp:91
#5  0xb7682188 in net::NetworkThread::run (this=0x9c92108) at /home/jerzy/Programy/ktorrent/libbtcore/net/networkthread.cpp:48
#6  0xb675ce2f in ?? () from /usr/lib/libQtCore.so.4
#7  0xb66c7885 in start_thread () from /lib/i686/libpthread.so.0
#8  0xb5a7657e in clone () from /lib/i686/libc.so.6

Thread 2 (Thread 0xadff2b70 (LWP 17498)):
#0  0xffffe424 in __kernel_vsyscall ()
#1  0xb66cbd12 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/i686/libpthread.so.0
#2  0xb675c72c in ?? () from /usr/lib/libQtCore.so.4
#3  0xb675c870 in QThread::msleep () from /usr/lib/libQtCore.so.4
#4  0xb76812e9 in net::UploadThread::update (this=0x9c92468) at /home/jerzy/Programy/ktorrent/libbtcore/net/uploadthread.cpp:88
#5  0xb7682188 in net::NetworkThread::run (this=0x9c92468) at /home/jerzy/Programy/ktorrent/libbtcore/net/networkthread.cpp:48
#6  0xb675ce2f in ?? () from /usr/lib/libQtCore.so.4
#7  0xb66c7885 in start_thread () from /lib/i686/libpthread.so.0
#8  0xb5a7657e in clone () from /lib/i686/libc.so.6

Thread 1 (Thread 0xb49a36d0 (LWP 17476)):
[KCrash Handler]
#6  0xb768de23 in bt::AuthenticationMonitor::handleData (this=0x810c7a0) at /home/jerzy/Programy/ktorrent/libbtcore/peer/authenticationmonitor.cpp:122
#7  0xb768df53 in bt::AuthenticationMonitor::update (this=0x810c7a0) at /home/jerzy/Programy/ktorrent/libbtcore/peer/authenticationmonitor.cpp:99
#8  0x08068dbd in kt::Core::update (this=0x9da0168) at /home/jerzy/Programy/ktorrent/ktorrent/core.cpp:959
#9  0x0806f5b7 in kt::Core::qt_metacall (this=0x9da0168, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbf9ea1cc) at /home/jerzy/Programy/ktorrent/build/ktorrent/core.moc:165
#10 0xb686b2ed in QMetaObject::metacall () from /usr/lib/libQtCore.so.4
#11 0xb687a11a in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#12 0xb68cd185 in QTimer::timeout () from /usr/lib/libQtCore.so.4
#13 0xb6882406 in QTimer::timerEvent () from /usr/lib/libQtCore.so.4
#14 0xb6876c24 in QObject::event () from /usr/lib/libQtCore.so.4
#15 0xb5d5972c in QApplicationPrivate::notify_helper () from /usr/lib/libQtGui.so.4
#16 0xb5d60578 in QApplication::notify () from /usr/lib/libQtGui.so.4
#17 0xb703a001 in KApplication::notify () from /usr/lib/libkdeui.so.5
#18 0xb6865f7e in QCoreApplication::notifyInternal () from /usr/lib/libQtCore.so.4
#19 0xb689614a in ?? () from /usr/lib/libQtCore.so.4
#20 0xb6892e25 in ?? () from /usr/lib/libQtCore.so.4
#21 0xb5070b92 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#22 0xb5074468 in ?? () from /usr/lib/libglib-2.0.so.0
#23 0xb507458e in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#24 0xb6892ac1 in QEventDispatcherGlib::processEvents () from /usr/lib/libQtCore.so.4
#25 0xb5e19dba in ?? () from /usr/lib/libQtGui.so.4
#26 0xb68645ed in QEventLoop::processEvents () from /usr/lib/libQtCore.so.4
#27 0xb6864a39 in QEventLoop::exec () from /usr/lib/libQtCore.so.4
#28 0xb6868bb0 in QCoreApplication::exec () from /usr/lib/libQtCore.so.4
#29 0xb5d597d4 in QApplication::exec () from /usr/lib/libQtGui.so.4
#30 0x08066968 in main (argc=1, argv=0xbf9eae14) at /home/jerzy/Programy/ktorrent/ktorrent/main.cpp:172

Possible duplicates by query: bug 228331, bug 189067.

Reported using DrKonqi
Comment 1 Joris Guisson 2010-02-25 07:59:56 UTC
I'm currently investigating this bug, ran into it myself yesterday
Comment 2 Joris Guisson 2010-02-26 18:46:28 UTC
*** Bug 228331 has been marked as a duplicate of this bug. ***
Comment 3 Joris Guisson 2010-02-26 18:50:38 UTC
SVN commit 1096467 by guisson:

Fix crash in AuthenticationMonitor, caused by dangling pointer 

BUG: 228395


 M  +1 -0      ChangeLog  
 M  +14 -8     libbtcore/peer/authenticationmonitor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1096467
Comment 4 Jerzy 2010-02-26 23:31:00 UTC
I have updated my copy of KTorrent from svn (Rev 1096573) and it works fine now :)
Great thanks,
Jerzy