Fix crash in AuthenticationMonitor, caused by dangling pointer

BUG: 228395

svn path=/trunk/extragear/network/ktorrent/; revision=1096467